[package]
name = "tw3-witcherscript-superset"
version = "0.1.0"
edition = "2021"

build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"

[build-dependencies]
lalrpop = "0.19.7"