[package]
name = "cahirc"
version = "0.1.0"
edition = "2021"

build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"
uuid = { version = "1.1.2", features = ["v4"] }
ariadne = "0.1.5" # error display
dunce = "1.0.2" # better windows path display

[build-dependencies]
lalrpop = "0.19.7"